--- a/src/styles/tools/_variable.scss
+++ b/src/styles/tools/_variable.scss
@@ -3,13 +3,10 @@
 /* ========================================================================== */
 
 /* fonts */
-$avenirNext: 'avenirnext', arial, sans-serif;
+$lato: 'lato', arial, sans-serif;
 $helvetica: Helvetica;
 
 /* colors */
 $black: #000000;
 $white: #fff;
-$yellow: #FFFC00;
-$orange: #ffe700;
-$red: #EC493E;
-$blue: #5CD2D2;
+$blue: #4353FF;
