--- a/src/styles/tools/_fonts.scss
+++ b/src/styles/tools/_fonts.scss
@@ -30,3 +30,123 @@
     font-weight: 600;
 }
 
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-black-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-black-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-blackitalic-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-blackitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-bold-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-bolditalic-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-bolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-hairline-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-hairline-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-hairlineitalic-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-hairlineitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-italic-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-light-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-lightitalic-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-lightitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/avenirnext/lato-regular-webfont.woff2') format('woff2'),
+         url('../fonts/avenirnext/lato-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
