--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,14 @@
 //TOOLS
 @import 'tools/fonts';
 @import 'tools/medias';
-@import 'tools/reset';
 @import 'tools/variable';
+@import 'tools/reset';
 
 
 // UI
 @import 'ui/header';
+@import 'ui/button';
+
+
+// PARTIALS
+@import 'partial/concept';
