--- a/src/styles/tools/_fonts.scss
+++ b/src/styles/tools/_fonts.scss
@@ -2,7 +2,7 @@
     font-family: 'lato';
     src: url('../fonts/lato/lato-black-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-black-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 900;
     font-style: normal;
 
 }
@@ -14,8 +14,8 @@
     font-family: 'lato';
     src: url('../fonts/lato/lato-blackitalic-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-blackitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 900;
+    font-style: italic;
 
 }
 
@@ -26,7 +26,7 @@
     font-family: 'lato';
     src: url('../fonts/lato/lato-bold-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-bold-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 700;
     font-style: normal;
 
 }
@@ -38,35 +38,10 @@
     font-family: 'lato';
     src: url('../fonts/lato/lato-bolditalic-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-bolditalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 700;
+    font-style: italic;
 
 }
-
-
-
-
-@font-face {
-    font-family: 'lato';
-    src: url('../fonts/lato/lato-hairline-webfont.woff2') format('woff2'),
-         url('../fonts/lato/lato-hairline-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
-
-
-@font-face {
-    font-family: 'lato';
-    src: url('../fonts/lato/lato-hairlineitalic-webfont.woff2') format('woff2'),
-         url('../fonts/lato/lato-hairlineitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 
 
 
@@ -75,7 +50,7 @@
     src: url('../fonts/lato/lato-italic-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-italic-webfont.woff') format('woff');
     font-weight: normal;
-    font-style: normal;
+    font-style: italic;
 
 }
 
@@ -86,7 +61,7 @@
     font-family: 'lato';
     src: url('../fonts/lato/lato-light-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-light-webfont.woff') format('woff');
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
 
 }
@@ -98,8 +73,8 @@
     font-family: 'lato';
     src: url('../fonts/lato/lato-lightitalic-webfont.woff2') format('woff2'),
          url('../fonts/lato/lato-lightitalic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 300;
+    font-style: italic;
 
 }
 
