--- a/src/styles/partial/_concept.scss
+++ b/src/styles/partial/_concept.scss
@@ -24,6 +24,8 @@
     .title {
       font-size: 24px;
       font-weight: 900;
+      letter-spacing: 1px;
+      color: $blue;
       margin-bottom: 20px;
 
       @include maxWidth($breakPointTablet) {
@@ -35,6 +37,7 @@
 
     .text {
       margin-bottom: 51px;
+      letter-spacing: 1px;
 
       @include maxWidth($breakPointTablet) {
         font-size: 14px;
