--- a/src/styles/partial/_concept.scss
+++ b/src/styles/partial/_concept.scss
@@ -60,8 +60,22 @@
 
 
 .separator {
-  height: 535px;
-  width: 100%;
   background-image: url('../images/bg.png');
-  
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: 100% 100%;
+  height: 535px;
+
+  @include maxWidth($breakPointMaxDesktop) {
+    height: 535px;
+    background-size: cover;
+  }
+
+  @include maxWidth($breakPointTablet) {
+    height: 300px;
+  }
+
+  @include maxWidth($breakPointMobile) {
+    height: 230px;
+  }
 }
