--- a/src/styles/partial/_temoignages.scss
+++ b/src/styles/partial/_temoignages.scss
@@ -5,7 +5,7 @@
   background-image: url('../images/bg-imgs.png');
   background-repeat: no-repeat;
   margin-top: 220px;
-  margin-bottom: 280px;
+  margin-bottom: 100px;
   background-size: 100% 100%;
 
   @include maxWidth($breakPointMaxDesktop) {
@@ -14,6 +14,9 @@
 
   @include maxWidth($breakPointTablet) {
     background-image: url('../images/bg-mobile.png');
+    height: 330px;
+    margin-top: 100px;
+    margin-bottom: 100px;
   }
 
   .temoignage {
@@ -28,6 +31,10 @@
       font-size: 18px;
       letter-spacing: 0.6px;
       text-align: center;
+
+      @include maxWidth($breakPointTablet) {
+        font-size: 14px;
+      }
     }
 
     .personne {
@@ -41,6 +48,12 @@
         .name {
           font-weight: 700;
           margin-bottom: 6px;
+        }
+
+        p {
+          @include maxWidth($breakPointTablet) {
+            font-size: 14px;
+          }
         }
       }
 
