--- a/src/styles/partial/_formulaire.scss
+++ b/src/styles/partial/_formulaire.scss
@@ -102,6 +102,7 @@
             &.container_cta {
                 display: flex;
                 justify-content: center;
+                margin-bottom: 80px;
             }
         }
     }
