--- a/src/styles/partial/_programme.scss
+++ b/src/styles/partial/_programme.scss
@@ -46,21 +46,24 @@
         display: block;
         text-transform: uppercase;
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 500;
         letter-spacing: 0.5px;
         padding-top: 48px;
+        color: $grey;
 
         @include maxWidth($breakPointTablet) {
           font-size: 12px;
           padding-top: 18px;
         }
-      }
+      } 
 
       .title {
         font-size: 24px;
         font-weight: 900;
         letter-spacing: 0.7px;
         margin: 24px 0 16px;
+        color: $blue;
+        font-weight: 700;
 
         @include maxWidth($breakPointTablet) {
           font-size: 18px;
@@ -71,6 +74,7 @@
       .paragraphe {
         font-size: 18px;
         letter-spacing: 0.6px;
+        font-weight: 300;
 
         @include maxWidth($breakPointTablet) {
           font-size: 16px;
