--- a/src/styles/partial/_temoignages.scss
+++ b/src/styles/partial/_temoignages.scss
@@ -31,6 +31,8 @@
       font-size: 18px;
       letter-spacing: 0.6px;
       text-align: center;
+      color: $white;
+      font-weight: 300;
 
       @include maxWidth($breakPointTablet) {
         font-size: 14px;
@@ -48,9 +50,14 @@
         .name {
           font-weight: 700;
           margin-bottom: 6px;
+          color: $white;
+          font-weight: 500;
         }
 
         p {
+          color: $white;
+          font-weight: 300;
+
           @include maxWidth($breakPointTablet) {
             font-size: 14px;
           }
