--- a/src/styles/ui/_footer.scss
+++ b/src/styles/ui/_footer.scss
@@ -5,6 +5,9 @@ footer {
     background-size: 100% 100%;
     height: 512px;
 
+    @include maxWidth($breakPointTablet) {
+        background-image: url('../images/bg-footer-mobile.png');
+    }
     .container_carre {
         display: flex;
         justify-content: space-between;
