--- a/src/styles/ui/_footer.scss
+++ b/src/styles/ui/_footer.scss
@@ -1,75 +1,98 @@
 footer {
-    background-image: url('../images/bg-footer.png');
-    background-repeat: no-repeat;
-    width: 100%;
-    background-size: 100% 100%;
-    height: 512px;
+  background-image: url('../images/bg-footer.png');
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: 100% 100%;
+  height: 512px;
 
+  @include maxWidth($breakPointTablet) {
+    background-image: url('../images/bg-footer-mobile.png');
+    height: 750px;
+  }
+
+  .container_carre {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1100px;
+    width: 100%;
+    height: 80%;
+    margin: 0 auto;
+    
     @include maxWidth($breakPointTablet) {
-        background-image: url('../images/bg-footer-mobile.png');
+      flex-direction: column;
+      max-width: 500px;
+      height: auto;
+      padding-top: 70px;
     }
-    .container_carre {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        max-width: 1100px;
-        width: 100%;
-        height: 80%;
-        margin: 0 auto;
-        
+
+    div {
+      display: flex;
+      max-width: 550px;
+      width: 100%;
+      justify-content: space-between;
+
+      @include maxWidth($breakPointTablet) {
+        flex-direction: column;
+      }
+
+      div {
+        flex-direction: column;
+
         @include maxWidth($breakPointTablet) {
-            flex-wrap: wrap;
-            max-width: 500px;
+          margin-bottom: 50px;
         }
 
         div {
-            display: flex;
-            max-width: 550px;
-            width: 100%;
-            justify-content: space-between;
-
-            div {
-                flex-direction: column;
-
-                div {
-                    width: 32px;
-                    height: 32px;
-                    background-color: #ECECEC;
-                    margin: 0 auto;
-                }
-        
-                p {
-                    text-align: center;
-                    margin-top: 20px;
-                    color: $white;
-                    font-family: $lato;
-                    font-weight: 300;
-                    font-size: 16px;
-                }
-            }
+          width: 32px;
+          height: 32px;
+          background-color: #ECECEC;
+          margin: 0 auto;
         }
-    }
 
-    .container_contact {
-        display: flex;
-        justify-content: space-around;
-        max-width: 150px;
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    .credit {
-        color: $white;
-        font-family: $lato;
-        font-weight: 300;
-        font-size: 16px;
-        margin-left: 100px;
-
-        @include maxWidth($breakPointTablet) {
-            display: flex;
-            justify-content: center;
-            margin-left: 0;
-            margin-top: 15px;
+        p {
+          text-align: center;
+          margin-top: 20px;
+          color: $white;
+          font-family: $lato;
+          font-weight: 300;
+          font-size: 16px;
         }
+      }
     }
+  }
+
+  .container_contact {
+    display: flex;
+    justify-content: space-around;
+    max-width: 200px;
+    width: 100%;
+    margin: 0 auto;
+
+    @include maxWidth($breakPointTablet) {
+      margin-top: 60px;
+
+      a {
+        img {
+          width: 48px;
+        }
+      }
+    }
+  }
+
+  .credit {
+    color: $white;
+    font-family: $lato;
+    font-weight: 300;
+    font-size: 16px;
+    margin-left: 80px;
+
+    @include maxWidth($breakPointTablet) {
+      display: flex;
+      padding-left: 24px;
+      margin-left: 0;
+      margin-top: 45px;
+      padding-bottom: 30px;
+    }
+  }
 }  
