--- a/src/styles/ui/_button.scss
+++ b/src/styles/ui/_button.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   font-size: 16px;
   color: $white;
-  border: 1px solid $white;
+  border: 1px solid $blue;
   background-color: $blue;
   padding: 18px 48px;
   border-radius: 30px;
