--- a/src/styles/partial/_formulaire.scss
+++ b/src/styles/partial/_formulaire.scss
@@ -29,11 +29,7 @@
             }
 
             output {
-                font-size: 18px;
-                font-family: $lato;
-                font-weight: 500;
-                color: $blue;
-                margin-left: 4px;
+                font-weight: 900;
             }
 
             input {
@@ -103,6 +99,7 @@
                 display: flex;
                 justify-content: center;
                 margin-bottom: 80px;
+                margin-top: 30px;
             }
         }
     }
