add submit effect

--- a/src/styles/partial/_formulaire.scss
+++ b/src/styles/partial/_formulaire.scss
@@ -5,6 +5,10 @@
     letter-spacing: 1px;
     margin-top: 150px;
 
+    @include maxWidth($breakPointTablet) {
+        padding: 0 16px;
+    }
+
     h2 {
         font-size: 24px;
         font-family: $lato;
@@ -94,13 +98,98 @@
                     
                 }
             }
-
-            &.container_cta {
-                display: flex;
-                justify-content: center;
-                margin-bottom: 80px;
-                margin-top: 30px;
-            }
         }
     }
+}
+
+@keyframes fillup {
+  to { stroke-dasharray: 200 200; }
+}
+
+button {
+  display: block;
+  position: relative;
+  margin: 100px auto;
+  background: transparent;
+  border: solid 2px $blue;
+  padding: 10px 50px;
+  border-radius: 100px;
+  color: $blue;
+  font-family: $lato;
+  font-size: 16px;
+  transition: background 0.5s ease, color 0.5s ease, width 0.5s ease, padding 0.5s ease;
+  outline: none;
+  height: 50px;
+  width: 180px;
+
+   @include maxWidth($breakPointTablet) {
+       margin: 60px auto;
+   }
+  
+  &:hover {
+    background: $blue;
+    color: $white;
+    cursor: pointer;
+  }
+  
+  &.clicked {
+    padding: 0;
+    width: 50px;
+    background: $white;
+    border-width: 4px;
+    border-color: #CCC;
+    background: conic-gradient(#655 40%, yellowblue 0);
+ 
+    span.text {
+      display: none;
+    }
+    
+    .spinner {
+      display: block;
+      
+      circle {
+        animation: fillup 2s cubic-bezier(1,.04,.41,.76) 0.5s;
+        animation-fill-mode: forwards;
+      }
+    }
+  }
+  
+  &.submited {
+    background-color: $blue;
+    width: 180px;
+    border-width: 2px;
+    border-color: $blue;
+    
+    .spinner {
+      display: none;
+    }
+    
+    .icon {
+      font-size: 18px;
+    }
+  }
+  
+  .spinner {
+    position: absolute;
+    top: -4px;
+    left: -4px;
+    display: none;
+    
+    svg {
+      transform: rotate(-90deg);
+    }
+    
+    circle {
+      fill: transparent;
+      stroke: $blue;
+      stroke-width: 4;
+      stroke-dasharray: 0 200;
+    }
+  }
+  
+  .icon {
+    font-size: 0;
+    color: $white;
+    transition: all 0.5s ease;
+  }
 }
