--- a/src/styles/partial/_formulaire.scss
+++ b/src/styles/partial/_formulaire.scss
@@ -30,6 +30,7 @@
                 font-weight: 500;
                 color: $blue;
                 padding: 5px 0;
+                margin-bottom: 20px;
             }
 
             output {
