--- a/src/styles/partial/_temoignages.scss
+++ b/src/styles/partial/_temoignages.scss
@@ -26,7 +26,7 @@
   }
 
   .imgs {
-    max-width: 1440px;
+    max-width: 1500px;
     width: 100%;
     margin: 0 auto;
     position: relative;
@@ -42,11 +42,15 @@
 
       &-contain {
         position: relative;
-        margin: 60px 30px 0;
+        margin: 0 30px;
 
 
         div {
           position: absolute;
+
+          img {
+            width: 50%;
+          }
 
           &:nth-child(1) {
             left: 26px;
@@ -109,50 +113,54 @@
         div {
           position: absolute;
 
+          img {
+            width: 50%;
+          }
+
           &:nth-child(1) {
-            right: 26px;
+            right: -50px;
           }  
 
           &:nth-child(2) {
             top: 90px;
-            right: 170px;
+            right: 130px;
 
             @include maxWidth($breakPointDesktop) {
-              right: 120px;
+              right: 70px;
             }
           }  
 
           &:nth-child(3) {
             top: 170px;
-            right: 0;
+            right: -50px;
           }  
 
           &:nth-child(4) {
             top: 280px;
-            right: 213px;
+            right: 150px;
 
             @include maxWidth($breakPointDesktop) {
               top: 230px;
-              right: 160px;
+              right: 110px;
             }
           }  
 
           &:nth-child(5) {
             top: 400px;
-            right: 0;
+            right: -50px;
 
             @include maxWidth($breakPointDesktop) {
-              top: 340px;
+              top: 290px;
             }
           }  
 
           &:nth-child(6) {
             top: 450px;
-            right: 145px;
+            right: 90px;
 
             @include maxWidth($breakPointDesktop) {
               top: 420px;
-              right: 110px;
+              right: 60px;
             }
           }        
         }        
