--- a/src/styles/ui/_footer.scss
+++ b/src/styles/ui/_footer.scss
@@ -18,6 +18,7 @@ footer {
     width: 100%;
     height: 80%;
     margin: 0 auto;
+    padding: 0 20px;
     
     @include maxWidth($breakPointTablet) {
       flex-direction: column;
@@ -36,11 +37,10 @@ footer {
           flex-direction: column;
         }
 
-        div {
-          width: 32px;
-          height: 32px;
-          background-color: #ECECEC;
+        img {
+          display: block;
           margin: 0 auto;
+          // width: 50%;
         }
 
         p {
