--- a/src/styles/partial/_concept.scss
+++ b/src/styles/partial/_concept.scss
@@ -16,6 +16,7 @@
   .description {
     max-width: 362px;
     width: 100%;
+    margin-bottom: 20px;
 
     @include maxWidth($breakPointTablet) {
       order: 1;
