--- a/src/styles/partial/_concept.scss
+++ b/src/styles/partial/_concept.scss
@@ -4,8 +4,8 @@
   align-items: center;
   max-width: 1020px;
   width: 100%;
-  margin: 230px auto 0;
-  padding: 0 80px;
+  margin: 0 auto ;
+  padding: 230px 80px 0;
 
   @include maxWidth($breakPointTablet) {
     padding: 0 16px;
